# MinecraftChatRust

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
mc_chat_core/: Cargo.toml  README.md  parsing.d2
mc_chat_core/src/: lib.rs  parsing.rs
mc_chat_proc/: Cargo.toml  README.md
mc_chat_proc/src/: lib.rs
src/: component.rs  freeze.rs  lib.rs  macros.rs  serde_support.rs  style.rs  tests.rs  text.rs
src/component/: mod.rs  serde_support.rs
src/serde_support/: mod.rs
src/style/: colors.rs  mod.rs  serde_support.rs
tests/: macros.rs
