[package]
name = "mc_chat"
version = "0.3.0-alpha"
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/GrizzlT/MinecraftChatRust"
description = "A crate aimed to provide easy-to-use Rust objects to work with Minecraft's raw JSON message format"
readme = "README.md"
keywords = [ "parsing", "minecraft", "chat", "message", "format"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true}
typetag = { version = "0.1", optional = true }
serde_json = "1.0"

[features]
default = ["serde-support"]
serde-support = [ "serde", "typetag" ]
