[package]
name = "mc_chat"
version = "0.3.0"
resolver = "2"
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/GrizzlT/MinecraftChatRust"
description = "A crate aimed to provide easy-to-use Rust objects to work with Minecraft's raw JSON message format"
readme = "README.md"
keywords = [ "parsing", "minecraft", "chat", "message", "format"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
serde_json = "1.0"
