[package]
name = "mc_chat"
version = "0.3.0"
resolver = "2"
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/GrizzlT/MinecraftChatRust"
description = "A crate aimed to provide easy-to-use Rust objects to work with Minecraft's raw JSON message format"
readme = "README.md"
keywords = [ "parsing", "minecraft", "chat", "message", "format"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
fastsnbt = { git = "https://github.com/owengage/fastnbt", branch = "dev/snbt" }
uuid = "1.3.2"
palette = { version = "0.7.3", optional = true }

mc_chat_proc = { path = "./mc_chat_proc", optional = true }
clap = { version = "4.4.11", features = ["derive"] }

[dev-dependencies]
serde_test = "1.0"

[features]
default = [ "serde" ]
serde = [ "dep:serde", "serde_json", "uuid/serde"]
macros = [ "mc_chat_proc" ]
pallette = [ "palette" ]